# Numerical_Methods

./: .gitignore  CMakeLists.txt
Cauchy 2/test/: CMakeLists.txt  main.cpp
Cauchy/test/: CMakeLists.txt  main.cpp
Gauss/: CMakeLists.txt
Gauss/include/: gauss.h
Gauss/src/: gauss.cpp
Gauss/test/: CMakeLists.txt  main.cpp  task8.txt
Interpolation/: CMakeLists.txt
Interpolation/include/: interpolation.h
Interpolation/test/: CMakeLists.txt  main.cpp
MNK/test/: CMakeLists.txt  main.cpp
Matrix/: CMakeLists.txt
Matrix/include/: Matrix.h
Matrix/src/: Matrix.cpp
Methods_for_solving_nonlinear_equats/: CMakeLists.txt
Methods_for_solving_nonlinear_equats/include/: methods.h
Methods_for_solving_nonlinear_equats/src/: methods.cpp
Methods_for_solving_nonlinear_equats/test/: CMakeLists.txt  main.cpp
Numerical_differentiation/test/: CMakeLists.txt  main.cpp
Rotation_method/: CMakeLists.txt
Rotation_method/include/: rotate_method.h
Rotation_method/src/: rotate_method.cpp
Rotation_method/test/: CMakeLists.txt  main.cpp  test.txt
Seidel/: CMakeLists.txt
Seidel/include/: functions.h
Seidel/test/: CMakeLists.txt  seidel.cpp  simple_iter.cpp  test.txt
Spline_Interpolation/test/: CMakeLists.txt  main.cpp
System_nonlinear_equations/: CMakeLists.txt
System_nonlinear_equations/include/: method.h
System_nonlinear_equations/src/: method.cpp
System_nonlinear_equations/test/: CMakeLists.txt  main.cpp
Thomas_method/: CMakeLists.txt
Thomas_method/include/: method.h
Thomas_method/src/: method.cpp
Thomas_method/test/: CMakeLists.txt  main.cpp  t.txt
integration/test/: CMakeLists.txt  main.cpp
